Fix double-editing tracks + more visible edit on hover

--- a/app/styles/components/_track.scss
+++ b/app/styles/components/_track.scss
@@ -59,4 +59,7 @@ a.Track-link {
 	padding: em(4,13) em(7,13) em(3,13);
 	@include size-1;
 	color: $lightgray;
+	.Track:hover & {
+		color: $text-color;
+	}
 }
